* Ships se guardan en la sesión * Se usa un indice para seleccionar los ships * Modificados los campos del form de creación de barcos. * Agregado el Step que verifica que el barco se haya creado en la posición deseada.

--- a/batalla_naval/app/views/play.html.erb
+++ b/batalla_naval/app/views/play.html.erb
@@ -4,11 +4,38 @@
 
     <% form_tag "/board/add_ship", method: :post do %>
 
-      <%= select_tag :ship, options: @ships %>
+      <select name="ship">
+        <% @ships.each do |ship| %>
+            <option value="<%= @ships.index(ship) %>"> <%= ship %> </option>
+        <% end %>
+      </select>
+
+
       <%= select_tag :position, options: @positions %>
 
       <%= submit_tag "Add Ship" %>
 
     <%	end  %>
+
+  <div id="battleship-board">
+
+    <table>
+      <div class="row">
+
+        <%	 @positions.each do |position| %>
+            <tr>
+              <th>
+                <%= position %>
+              </th>
+            </tr>
+            <tr>
+              <td>
+                <%= session[:board].ship_at_position(position_from(position)) %>
+              </td>
+            </tr>
+        <% end %>
+      </div>
+    </table>
+  </div>
 
 </div>
