* Agregado step de disparar a una posición del tablero. * Agregado nuevo form para dispararle a una posición del tablero. * Removido el @wip del escenario de disparar y asertar. * Agregada la ruta para realizar un disparo en la aplicación padrino

--- a/batalla_naval/app/views/play.html.erb
+++ b/batalla_naval/app/views/play.html.erb
@@ -17,6 +17,18 @@
 
     <%	end  %>
 
+
+  <h3> Shoot </h3>
+
+  <% form_tag "/board/shoot", method: :post do %>
+
+      <%= select_tag :shoot_position, options: @positions %>
+
+      <%= submit_tag "Shoot" %>
+
+  <% end  %>
+
+
   <div id="battleship-board">
 
     <table>
